tests/NormalTests/paczka1/fuzzy1/80857189.err
Error in line 2: omqZ A877 78,9
Error in line 10: mOf8NSs5gAq A832 7,9
Error in line 8: omqZ S1 55,7
Error in line 25: h7EM A877 66,4
Error in line 22: A877 A877 3,0
Error in line 33: A877 S1 19,9
